Added ATP test suite

--- a/Config/config.ini
+++ b/Config/config.ini
@@ -6,9 +6,11 @@ IPv4_ADDRESS = 172.24.0.2
 IPv6_ADDRESS = fc00:db8:2:0:172:24:0:2
 START_PATH = /home/labadmin/Tools/bts-simulator/server_go
 START_COMMAND = go run main.go
+PORTS = [6001,6002,6003,6004,6005,6006,6007,6008,6009,6010]
 CERT = /home/labadmin/Tools/certs/server.crt
 KEY = /home/labadmin/Tools/certs/server.key
 CA = /home/labadmin/Tools/certs/signing-chain.crt
+FTP_UPLOAD_FILE= /home/labadmin/Tools/bts-simulator/server_go
 
 [NEM]
 USERNAME = labadmin
@@ -24,10 +26,10 @@ CA = /home/labadmin/Tools/certs/signing-chain.crt
 USERNAME = labadmin
 PASSWORD = lab123admin123
 IP_ADDRESS = 109.230.228.91
-IP_ADDRESS_v6 = fc00:db8:1:0:172:20:0:1
+IP_ADDRESS_v6 = fc00:db8:3:0:109:230:228:91
 NEM_nbi_IP4 = 172.20.0.1
 NE_sbi_IP4 = 172.24.0.1
-DOMIN_NAME = www.simple.org
+DOMAIN_NAME = www.simple.org
 PORT = 443
 
 [FTP]
@@ -42,3 +44,5 @@ CA = /home/shaikn/REST/signing-chain.crt
 
 [AUTOMATION_VARS]
 LOG_LEVEL = INFO
+API_FILE = api_atp.json
+EXPECTED_API_FILE = expected_values_atp.json
