--- a/Config/config.ini
+++ b/Config/config.ini
@@ -10,7 +10,7 @@ PORTS = [6001,6002,6003,6004,6005,6006,6007,6008,6009,6010]
 CERT = /home/labadmin/Tools/certs/server.crt
 KEY = /home/labadmin/Tools/certs/server.key
 CA = /home/labadmin/Tools/certs/signing-chain.crt
-FTP_UPLOAD_FILE= /home/labadmin/Tools/bts-simulator/server_go
+FTP_UPLOAD_FILE= /home/labadmin/Tools/topv1_1M.log
 
 [NEM]
 USERNAME = labadmin
