--- a/Config/config.ini
+++ b/Config/config.ini
@@ -31,6 +31,7 @@ NEM_nbi_IP4 = 172.20.0.1
 NE_sbi_IP4 = 172.24.0.1
 DOMAIN_NAME = www.simple.org
 PORT = 443
+CONFIG_PATH = /etc/alg/config/alg-config.json
 
 [FTP]
 SERVER_IPv4 = 109.230.228.89
@@ -43,6 +44,6 @@ KEY = /home/shaikn/REST/client.key
 CA = /home/shaikn/REST/signing-chain.crt
 
 [AUTOMATION_VARS]
-LOG_LEVEL = INFO
+LOG_LEVEL = DEBUG
 API_FILE = api_atp.json
 EXPECTED_API_FILE = expected_values_atp.json
